<resources>
    <string name="app_name">AppFolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_button_1">SPOTIFY STREAMER</string>
    <string name="text_button_2">SCORES APP</string>
    <string name="text_button_3">LIBRARY APP</string>
    <string name="text_button_4">BUILD IT BIGGER</string>
    <string name="text_button_5">XYZ READER</string>
    <string name="text_button_6">CAPSTONE PROJECT</string>
    <string name="text_textview_title">My Android Apps</string>
</resources>
