<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivityFragment">


    <LinearLayout
        android:id="@+id/root_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_textview_title"
            android:id="@+id/textView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_1"
            android:id="@+id/button_app1"
            android:layout_gravity="center_horizontal"
            android:background="@color/primary"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_2"
            android:id="@+id/button_app2"
            android:layout_gravity="center_horizontal"
            android:background="@color/primary"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_3"
            android:id="@+id/button_app3"
            android:layout_gravity="center_horizontal"
            android:background="@color/primary"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_4"
            android:id="@+id/button_app4"
            android:layout_gravity="center_horizontal"
            android:background="@color/primary"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_5"
            android:id="@+id/button_app5"
            android:layout_gravity="center_horizontal"
            android:background="@color/primary"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_6"
            android:id="@+id/button_app6"
            android:layout_gravity="center_horizontal"
            android:background="@color/accent"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"/>
    </LinearLayout>


</RelativeLayout>
